# dogecoin

./: .gitignore  README_OP_CHECKZKP.md  build-zkp-rust.sh  configure.ac  configure~
.cargo/: config.toml
.github/workflows/: ci.yml  codeql-analysis.yml
contrib/devtools/: security-check.py  symbol-check.py
depends/patches/native_cdrkit/: fix-outfile-multiple-definition.patch
depends/patches/qt/: fix-file-id-info-ubuntu24.patch
depends/patches/xcb_proto/: fix-python-312-imp-module.patch
qa/pull-tester/: install-deps.sh
qa/rpc-tests/test_framework/: mininode.py  script.py  scrypt_auxpow.py
src/: Makefile.am  Makefile.bench.include  Makefile.qt.include  Makefile.qttest.include  Makefile.test.include  bitcoin-tx.cpp  core_io.h  core_read.cpp  core_write.cpp  key.cpp  zkp_stub.cpp
src/script/: interpreter.cpp  script.cpp  script.h  script_error.cpp  script_error.h
src/test/: script_tests.cpp  transaction_tests.cpp
src/test/data/: script_tests.json
src/zkp-verifier/: Cargo.toml  build.rs
src/zkp-verifier/include/: zkp_verifier_wrapper.h
src/zkp-verifier/src/: cpp_integration.cpp  lib.rs
