[package]
name = "zkp-verifier"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "staticlib"]

[dependencies]
cxx = "1.0.117"
bincode = "1.3.3"
rand_core = "0.6.4"
rand = "0.8.5"
blake2 = "0.10"

# PLONK verification dependencies - using compatible versions
halo2curves = "0.6.1"
halo2_proofs = "0.3.0"
# Fix dependency name - use halo2-axiom instead of halo2_axiom
halo2-axiom = "0.5.0"
halo2curves-axiom = "0.5.3"
# Use specific rev from axiom-crypto's fork to match your openvm-aggregation repo
snark-verifier = { git = "https://github.com/axiom-crypto/snark-verifier", rev = "58f990fb00d5939f850d98361cabf286776b4f7d" }
once_cell = "1.21.3"

[build-dependencies]
cxx-build = "1.0.117"

[profile.release]
lto = "thin"
codegen-units = 1
opt-level = 3
panic = "abort"
